Mon Apr  7 12:46:42 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* constants.sh: Output aligned constants & use hexa instead of
	  decimal.

Wed Mar 26 23:07:31 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* Makefile.am, Makefile.in: Add s-garrep and s-gartra in
 	COMMON_OBJECTS and COMMON_SOURCES. Rebuild source
 	dependencies. Tag to_be_released.

	* zlib: Add zlib dir and tag to_be_released. Warning: Need for
	a target 'distclean' and 'clean' in zlib Makefile and also a call
	to this target in Garlic Makefile.

Mon Mar 24 15:44:31 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gartcp.adb: Modified Open_Code, Data_Code and Quit_Code to be
	indianess independant.

Fri Mar 21 11:37:44 1997  Samuel Tardieu  <sam@zaphod.enst.fr>

	* Makefile.am: Updated for automake 1.1m.

Mon Mar 17 15:30:14 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-stratt.adb: Incorrect check for W_*F. U was not always equal
 	to 0 because the first byte has a special treatment.

Wed Mar 12 13:53:10 1997  Laurent Pautet  <pautet@scapin.enst.fr>

	* Makefile.am: s-garela.o was missing. Not detected before because
	of a bug in gnatmake. 

	* mkdep: Missing space.

Sat Mar  8 16:48:38 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garrem.adb: Add -n to rsh. It won't break anything and at
	least, it may avoid dup2 to fail.

Fri Mar  7 14:14:46 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garrem.adb, s-garrem.ads: Add a parameter Launcher to most of
 	the launching commands in order to change default "rsh" command
 	which was hardcoded.

	* s-garfil.ads: Add pragma Elaborate_Body to please GNAT with its
 	new elaboration checks.

Wed Mar  5 14:53:58 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* s-garhea.ads: Add a new opcode User_Message.

	* s-parint.adb: Changed Public_RPC_Receiver into
 	Public_Message_Receiver.

Wed Mar  5 14:19:51 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* s-gartcp.adb: Added missing pragma Elaborate_All (new checks in
	  today's wavefront).
